--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
-main {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
+@import url('https://fonts.googleapis.com/css2?family=Jersey+15&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Jersey 15', sans-serif;
 }
+
 #contenedor {
-  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 100svh;
+  background-color: red;
+}
+body {
+  background-color: blue;
+}
+
+footer {
+  background-color: aqua;
 }
