--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,14 +1,17 @@
 header {
   display: flex;
-  height: 10svh;
+  width: 100%;
   padding: 10%;
   justify-content: space-around;
   align-items: center;
+  gap: 5%;
+  flex-wrap: wrap;
 }
 
 header button {
   padding: 10px 20px;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 25px;
   background-color: darkolivegreen;
+  margin: 10px;
 }
