--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 100svh;
   background-color: red;
 }
 body {
@@ -19,4 +18,8 @@ body {
 
 footer {
   background-color: aqua;
+}
+
+header {
+  background-color: blueviolet;
 }
