--- a/style.css
+++ b/style.css
@@ -42,9 +42,14 @@
   padding: 0;
   font-family: 'Jersey 15', sans-serif;
 }
+.content {
+  display: block;
+  width: 900px;
+  margin: auto;
+}
 
 .portada {
-  width: 300%;
+  width: 100%;
 }
 
 body {
