--- a/src/pages/stylesGames.css
+++ b/src/pages/stylesGames.css
@@ -2,13 +2,12 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  height: 550px;
-  width: 550px;
+  height: 600px;
+  width: 600px;
   border-radius: 10px;
   border-color: blue;
   margin: auto;
   margin-top: 250px;
-  position: relative;
   border-width: 1px;
   border: solid;
 }
@@ -33,10 +32,12 @@
 
 .grid h1 {
   font-size: var(--3jr-fontsize-l);
-  margin: 40px 100px;
   display: flex;
   position: absolute;
+  justify-content: center;
   color: var(--3jr-primary);
+  width: 600px;
+  margin-top: var(--3jr-margin-xl);
 }
 
 .salir {
@@ -48,16 +49,13 @@
   display: flex;
   position: absolute;
   margin-top: 130px;
-  padding: 5px;
-  width: 100px;
+  padding: 15px;
+  width: 130px;
   height: 80px;
   font-size: var(--3jr-fontsize-m);
   align-items: center;
   justify-content: center;
   background-color: var(--3jr-botton);
   color: var(--3jr-letterbotton);
-}
-
-.combinacionGanadora {
-  background-color: red;
+  border-radius: var(--3jr-border-radius);
 }
