--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 :root {
   --3jr-color-background: #4d3e93;
   --3jr-primary: #ffffff;
-  --3jr-secondary: #eace00;
+  --3jr-secondary: #73e4e4f1;
+  --3jr-terciary: rgb(255, 147, 5);
   --3jr-botton: #aae815;
   --3jr-logo: #1560e8;
   --3jr-letterbotton: #3a15e8;
