--- a/src/pages/tresEnRaya/stylesTER.css
+++ b/src/pages/tresEnRaya/stylesTER.css
@@ -5,11 +5,11 @@
   height: 600px;
   width: 600px;
   border-radius: 10px;
-  border-color: blue;
   margin: auto;
   margin-top: 250px;
   border-width: 1px;
   border: solid;
+  background-color: var(--3jr-secondary);
 }
 
 .celda {
