--- a/src/pages/stylesGames.css
+++ b/src/pages/stylesGames.css
@@ -1,6 +1,6 @@
 .tablero {
-  height: 600px;
-  width: 600px;
+  height: 660px;
+  width: 660px;
   border-radius: 10px;
   border-color: var(--3jr-letterbotton);
   margin: auto;
@@ -12,8 +12,10 @@
 .grid {
   margin: auto;
   display: grid;
-  height: 850px;
-  width: 600px;
+  height: 950px;
+  width: 660px;
+  justify-content: space-around;
+  align-content: space-between;
 }
 
 .grid h1 {
@@ -35,7 +37,7 @@
   position: absolute;
   margin-top: 130px;
   padding: 15px;
-  width: 130px;
+  width: 200px;
   height: 60px;
   font-size: var(--3jr-fontsize-m);
   align-items: center;
