--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,18 +8,62 @@ header {
   padding: var(--3jr-padding-sx);
   justify-content: space-around;
   align-items: center;
-  gap: var(--3jr-gap-xs);
-  flex-wrap: wrap;
+  /* gap: var(--3jr-gap-xs); */
+  flex-wrap: nowrap;
   height: 20%;
-  width: 100%;
-  margin-bottom: auto;
+  /* width: 100%; */
+  /* margin-bottom: auto; */
 }
 
 header button {
-  padding: var(--3jr-padding-s) var(--3jr-padding-s);
+  padding: var(--3jr-padding-s);
   border-radius: 10px;
-  font-size: var(--3jr-fontsize-l);
+  font-size: var(--3jr-fontsize-s);
   background-color: var(--3jr-botton);
-  margin: var(--3jr-margin-m);
+  margin: var(--3jr-margin-xs);
   color: var(--3jr-letterbotton);
+}
+
+@media screen and (min-width: 200px) {
+}
+
+@media screen and (min-width: 434px) {
+  header button {
+    padding: var(--3jr-padding-s);
+    font-size: var(--3jr-fontsize-s);
+  }
+}
+
+@media screen and (min-width: 500px) {
+  header button {
+    font-size: var(--3jr-fontsize-s);
+    /* width: 150%; */
+    margin: 0%;
+    margin-top: var(--3jr-margin-sx);
+  }
+}
+
+@media screen and (min-width: 660px) {
+  header {
+    display: flex;
+    padding: var(--3jr-padding-s);
+    justify-content: space-around;
+    align-items: center;
+    gap: var(--3jr-gap-xs);
+    flex-wrap: nowrap;
+  }
+  header button {
+    font-size: var(--3jr-fontsize-s);
+    /* width: 150%; */
+    margin: 0%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+}
+
+@media screen and (min-width: 1150px) {
+}
+
+@media screen and (min-width: 1450px) {
 }
