--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -11,6 +11,7 @@ footer {
 @media screen and (min-width: 200px) {
   footer {
     font-size: var(--3jr-fontsize-s);
+    margin-left: 5%;
   }
 }
 
