--- a/mediastyle.css
+++ b/mediastyle.css
@@ -11,8 +11,8 @@
     justify-content: center;
   }
   .portada {
-    width: 70%;
-    margin-left: -20px;
+    width: 90%;
+    margin: 20% 30%;
   }
 }
 
