--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -29,6 +29,7 @@ header button {
     display: flex;
     flex-direction: column;
     margin-left: 5%;
+    margin-top: 10%;
   }
   header button {
     font-size: var(--3jr-fontsize-m);
