--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,24 +5,21 @@ footer {
   letter-spacing: var(--3jr-margin-xs);
   justify-content: center;
   width: 100%;
-  margin-top: var(--3jr-margin-l);
+  margin-top: var(--3jr-margin-xs);
 }
 
-@media screen and (min-width: 200px) {
+@media screen and (max-width: 500px) {
   footer {
     font-size: var(--3jr-fontsize-s);
-    margin-left: 5%;
   }
 }
-
-@media screen and (min-width: 368px) {
+@media screen and (max-width: 432px) {
   footer {
-    justify-content: center;
+    font-size: var(--3jr-fontsize-s);
   }
 }
-
-@media screen and (min-width: 568px) {
+@media screen and (max-width: 350px) {
   footer {
-    margin-left: 11%;
+    font-size: var(--3jr-fontsize-xs);
   }
 }
