--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -5,10 +5,9 @@
 
 header {
   display: flex;
-  padding: var(--3jr-padding-sx);
+  padding: var(--3jr-padding-s);
   justify-content: space-around;
   align-items: center;
-  gap: var(--3jr-gap-xs);
   flex-wrap: wrap;
   height: 20%;
   width: 100%;
@@ -16,63 +15,91 @@ header {
 }
 
 header button {
-  padding: var(--3jr-padding-s);
+  padding: var(--3jr-padding-m);
   border-radius: 10px;
-  font-size: var(--3jr-fontsize-s);
+  font-size: var(--3jr-fontsize-xxl);
   background-color: var(--3jr-botton);
   margin: var(--3jr-margin-s);
   color: var(--3jr-letterbotton);
+  width: 30%;
 }
 
-@media screen and (min-width: 200px) {
-  header {
-    display: flex;
-    flex-direction: column;
-    margin-left: 5%;
-    margin-top: 10%;
+@media screen and (max-width: 1800px) {
+  header button {
+    font-size: var(--3jr-fontsize-xxl);
   }
+}
+
+@media screen and (max-width: 1380px) {
+  header button {
+    font-size: var(--3jr-fontsize-l);
+    width: 30%;
+  }
+}
+@media screen and (max-width: 1160px) {
+  header button {
+    font-size: var(--3jr-fontsize-l);
+    width: 30%;
+    padding: var(--3jr-padding-s);
+  }
+}
+
+@media screen and (max-width: 915px) {
   header button {
     font-size: var(--3jr-fontsize-m);
-  }
-}
-
-@media screen and (min-width: 434px) {
-  header button {
+    width: 25%;
     padding: var(--3jr-padding-s);
-    font-size: var(--3jr-fontsize-s);
   }
-}
-
-@media screen and (min-width: 500px) {
-  header button {
-    font-size: var(--3jr-fontsize-s);
-    /* width: 150%; */
-    margin: 0%;
-    margin-top: var(--3jr-margin-sx);
-  }
-}
-
-@media screen and (min-width: 660px) {
   header {
-    display: flex;
-    padding: var(--3jr-padding-s);
-    justify-content: space-around;
-    align-items: center;
-    gap: var(--3jr-gap-xs);
-    flex-wrap: nowrap;
+    padding: var(--3jr-padding-xs);
+    flex-wrap: wrap;
+    justify-content: center;
   }
+}
+
+@media screen and (max-width: 700px) {
   header button {
     font-size: var(--3jr-fontsize-s);
-    /* width: 150%; */
-    margin: 0%;
+    width: 25%;
   }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (max-width: 800px) {
+  header button {
+    font-size: var(--3jr-fontsize-s);
+    width: 30%;
+  }
 }
 
-@media screen and (min-width: 1150px) {
+@media screen and (max-width: 500px) {
+  header button {
+    font-size: var(--3jr-fontsize-s);
+    width: 50%;
+  }
+}
+@media screen and (max-width: 432px) {
+  header button {
+    font-size: var(--3jr-fontsize-s);
+    width: 60%;
+  }
+}
+@media screen and (max-width: 350px) {
+  header button {
+    padding: var(--3jr-padding-xs);
+    font-size: var(--3jr-fontsize-s);
+    width: 50%;
+  }
+}
+@media screen and (max-width: 300px) {
+  header button {
+    font-size: var(--3jr-fontsize-xs);
+    width: 40%;
+  }
 }
 
-@media screen and (min-width: 1450px) {
+@media screen and (max-width: 250px) {
+  header button {
+    font-size: var(--3jr-fontsize-xs);
+    width: 40%;
+  }
 }
