--- a/src/pages/memory/stylesMMR.css
+++ b/src/pages/memory/stylesMMR.css
@@ -107,3 +107,35 @@
 .error {
   animation: error 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
+
+@media screen and (max-width: 800px) {
+  .tableroMMR {
+    height: 550px;
+    width: 550px;
+  }
+  .tarjetas {
+    width: 95px;
+    height: 80px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .tableroMMR {
+    height: 450px;
+    width: 400px;
+  }
+  .tarjetas {
+    width: 50px;
+    height: 50px;
+  }
+}
+@media screen and (max-width: 368px) {
+  .tableroMMR {
+    height: 350px;
+    width: 300px;
+  }
+  .tarjetas {
+    width: 45px;
+    height: 45px;
+  }
+}
