--- a/src/pages/memory/stylesMMR.css
+++ b/src/pages/memory/stylesMMR.css
@@ -147,3 +147,16 @@
     height: 45px;
   }
 }
+@media screen and (max-width: 268px) {
+  .tableroMMR {
+    height: 350px;
+    width: 300px;
+    margin-top: 75px;
+  }
+  .tarjetas,
+  .front-face,
+  .back-face {
+    width: 35px;
+    height: 35px;
+  }
+}
