--- a/mediastyle.css
+++ b/mediastyle.css
@@ -29,19 +29,24 @@
 @media screen and (max-width: 930px) {
   .portada {
     width: 90%;
+    margin-top: 5%;
+    margin-bottom: 5%;
   }
 }
 
 @media screen and (max-width: 860px) {
   .portada {
     width: 75%;
-    margin-left: -10%;
+    margin-top: 10%;
+    margin-bottom: 10%;
   }
 }
 @media screen and (max-width: 700px) {
   .portada {
     width: 65%;
-    margin-left: -25%;
+    margin-left: -18%;
+    margin-top: 15%;
+    margin-bottom: 15%;
   }
 }
 @media screen and (max-width: 600px) {
@@ -61,20 +66,22 @@
 @media screen and (max-width: 432px) {
   .portada {
     width: 40%;
-    margin-left: -55%;
+    margin-left: -58%;
+    margin-top: 10%;
+    margin-bottom: 10%;
   }
 }
 
 @media screen and (max-width: 350px) {
   .portada {
-    width: 30%;
-    margin-left: -60%;
+    width: 40%;
+    margin-left: -59%;
   }
 }
 
 @media screen and (max-width: 300px) {
   .portada {
-    width: 25%;
+    width: 30%;
     margin-left: -68%;
   }
 }
