--- a/src/pages/tresEnRaya/stylesTER.css
+++ b/src/pages/tresEnRaya/stylesTER.css
@@ -25,21 +25,29 @@
   .tableroTER {
     height: 500px;
     width: 500px;
-    margin-top: 200px;
+    margin-top: 120px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .tableroTER {
+    height: 400px;
+    width: 410px;
   }
 }
 
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 500px) {
   .tableroTER {
-    height: 500px;
-    width: 568px;
-    margin-top: 200px;
+    height: 300px;
+    width: 320px;
+    margin-top: 110px;
+    margin-left: 50px;
   }
 }
-@media screen and (max-width: 368px) {
+
+@media screen and (max-width: 400px) {
   .tableroTER {
-    height: 500px;
-    width: 368px;
-    margin-top: 200px;
+    height: 250px;
+    width: 260px;
+    margin-top: 100px;
   }
 }
