--- a/src/pages/Ahorcado/stylesAHC.css
+++ b/src/pages/Ahorcado/stylesAHC.css
@@ -1,11 +1,34 @@
-.tableroAHC {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: center;
+/* .tableroAHC {
+  background-color: #14ecab;
+  position: absolute;
+  margin-top: 25%;
+  margin-left: 3%;
   height: 600px;
   width: 600px;
   border-radius: 10px;
   border-color: var(--3jr-letterbotton);
-  margin: auto;
-  margin-top: 200px;
+} */
+
+/* Estilo para los mensajes y las letras */
+#message,
+#remainingAttempts,
+#wrongLetters,
+#word {
+  position: relative;
+  display: flex;
+  font-size: 1.2rem;
+  justify-content: space-around;
+}
+
+form {
+  display: flex;
+  justify-content: space-around;
+}
+
+#guessInput {
+  padding: 8px;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin: 5%;
 }
