--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,12 +5,12 @@ footer {
   letter-spacing: var(--3jr-margin-xs);
   justify-content: center;
   width: 100%;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 @media screen and (max-width: 800px) {
   footer {
-    margin-top: 45%;
+    margin-top: 10%;
     font-size: var(--3jr-fontsize-s);
   }
 }
@@ -18,20 +18,23 @@ footer {
 @media screen and (max-width: 500px) {
   footer {
     font-size: var(--3jr-fontsize-s);
+    width: 500px;
   }
 }
 
 @media screen and (max-width: 432px) {
   footer {
-    margin-top: 70%;
+    margin-top: 50%;
     font-size: var(--3jr-fontsize-s);
+    width: 430px;
   }
 }
 @media screen and (max-width: 350px) {
   footer {
     margin: auto;
 
-    margin-top: 100%;
+    margin-top: 40%;
     font-size: var(--3jr-fontsize-xs);
+    width: 350px;
   }
 }
