--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,11 +6,11 @@
 header {
   display: flex;
   padding: var(--3jr-padding-s);
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   height: 20%;
-  width: 100%;
+
   margin-bottom: auto;
 }
 
@@ -24,16 +24,17 @@ header button {
   width: 30%;
 }
 
-@media screen and (max-width: 1800px) {
+@media screen and (max-width: 1610px) {
   header button {
-    font-size: var(--3jr-fontsize-xxl);
+    font-size: var(--3jr-fontsize-xl);
   }
 }
 
 @media screen and (max-width: 1380px) {
   header button {
     font-size: var(--3jr-fontsize-l);
-    width: 30%;
+    width: 20%;
+    width: 20%;
   }
 }
 @media screen and (max-width: 1160px) {
