--- a/src/pages/stylesGames.css
+++ b/src/pages/stylesGames.css
@@ -9,7 +9,7 @@
 .grid {
   margin: auto;
   display: grid;
-  height: 800px;
+  height: 900px;
   width: 660px;
   align-content: space-evenly;
   justify-items: stretch;
@@ -62,7 +62,7 @@
   }
 
   .grid {
-    height: 600px;
+    height: 700px;
     width: 660px;
     align-content: baseline;
   }
@@ -85,7 +85,7 @@
   }
 
   .grid {
-    height: 550px;
+    height: 600px;
     width: 600px;
   }
 
@@ -109,12 +109,16 @@
   }
 
   .grid {
-    height: 400px;
-    width: 500px;
+    height: 500px;
+    width: 400px;
   }
 
   .grid button {
     margin-top: 85px;
+  }
+
+  .grid h1 {
+    justify-content: center;
   }
 }
 
