--- a/src/pages/tresEnRaya/stylesTER.css
+++ b/src/pages/tresEnRaya/stylesTER.css
@@ -6,7 +6,7 @@
   width: 600px;
   border-radius: 10px;
   margin: auto;
-  margin-top: 200px;
+  margin-top: 100px;
   border-width: 1px;
   border: solid;
   background-color: var(--3jr-secondary);
@@ -21,12 +21,13 @@
   cursor: point;
 }
 
-.grid {
+/* .grid {
   height: 900px;
   margin-left: 15%;
-}
+} */
+
 @media screen and (max-width: 900px) {
-  .grid {
+  /* .grid {
     height: 800px;
     margin-left: 10px;
   }
@@ -35,7 +36,7 @@
   }
   .grid {
     height: 900px;
-  }
+  } */
 }
 
 @media screen and (max-width: 800px) {
@@ -44,7 +45,7 @@
     width: 500px;
     margin-top: 120px;
   }
-  .inicio {
+  /* .inicio {
     margin-left: 20%;
   }
   .salir {
@@ -52,7 +53,7 @@
   }
   .grid {
     height: 750px;
-  }
+  } */
 }
 @media screen and (max-width: 700px) {
   .tableroTER {
@@ -60,7 +61,7 @@
     width: 410px;
   }
 
-  .inicio {
+  /* .inicio {
     margin-left: 120px;
   }
   .salir {
@@ -68,10 +69,10 @@
   }
   .grid {
     height: 650px;
-  }
+  } */
 }
 @media screen and (max-width: 600px) {
-  .inicio {
+  /* .inicio {
     margin-left: 100px;
   }
   .salir {
@@ -82,7 +83,7 @@
   }
   .grid {
     height: 600px;
-  }
+  } */
 }
 @media screen and (max-width: 500px) {
   .tableroTER {
@@ -91,7 +92,7 @@
     margin-top: 110px;
     margin-left: 50px;
   }
-  .grid h1 {
+  /* .grid h1 {
     width: 100%;
     margin-left: 10px;
   }
@@ -103,7 +104,7 @@
   }
   .grid {
     height: 500px;
-  }
+  } */
 }
 
 @media screen and (max-width: 400px) {
@@ -112,7 +113,7 @@
     width: 260px;
     margin-top: 100px;
   }
-  .grid h1 {
+  /* .grid h1 {
     width: 100%;
     margin-left: -10px;
   }
@@ -130,7 +131,7 @@
 
   .grid {
     height: 400px;
-  }
+  } */
 }
 
 @media screen and (max-width: 300px) {
@@ -140,7 +141,7 @@
     margin-top: 100px;
   }
 
-  .salir {
+  /* .salir {
     margin-left: 180px;
   }
   .grid button {
@@ -150,5 +151,5 @@
   }
   .grid {
     height: 300px;
-  }
+  } */
 }
