--- a/src/pages/memory/stylesMMR.css
+++ b/src/pages/memory/stylesMMR.css
@@ -7,7 +7,8 @@
   border-radius: 10px;
   border-color: var(--3jr-letterbotton);
   margin: auto;
-  margin-top: 200px;
+  margin-top: 150px;
+  justify-content: center;
 }
 
 .tarjetas {
@@ -16,7 +17,7 @@
   height: 90px;
   background-color: var(--3jr-terciary);
   border-radius: var(--3jr-border-radius);
-  margin: 6px;
+  margin: 7px;
   box-shadow: 2px 2px 15px black;
   transition: 0.5s;
   cursor: pointer;
@@ -107,141 +108,126 @@
 .error {
   animation: error 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
-
-@media screen and (max-width: 1950px) {
-  .tableroMMR {
-    height: 500px;
-    width: 800px;
-    margin-top: 120px;
-  }
-  .tarjetas,
-  .front-face,
-  .back-face {
-    width: 110px;
-    height: 90px;
-    margin-left: 2%;
-  }
-  /* .grid {
-    height: 800px;
-  }
-  .grid h1 {
-    width: 800px;
-  }
-  .salir {
-    margin-left: 600px;
-  } */
-}
-
 @media screen and (max-width: 900px) {
   .tableroMMR {
     height: 550px;
     width: 600px;
-    margin-top: 150px;
+    margin-top: 130px;
   }
   .tarjetas,
   .front-face,
   .back-face {
-    width: 95px;
-    height: 80px;
+    width: 100px;
   }
 }
-/* 
 @media screen and (max-width: 700px) {
-  .inicio {
-    margin-left: 100px;
+  .tarjetas,
+  .front-face,
+  .back-face {
+    width: 70px;
+    height: 60px;
   }
-  .salir {
-    margin-left: 390px;
+  .tableroMMR {
+    width: 500px;
+    margin-top: 70px;
   }
   .grid h1 {
-    width: 650px;
+    width: 700px;
   }
-  .grid {
-    height: 600px;
-    width: 600px;
-  }
-
-  .grid button {
-    margin-top: 90px;
-  }
-} */
+}
 
 @media screen and (max-width: 568px) {
   .tableroMMR {
     height: 400px;
-    width: 450px;
+    width: 400px;
   }
   .tarjetas,
   .front-face,
   .back-face {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
   }
-  /* .grid h1 {
-    width: 500px;
-  }
-  .salir {
-    margin-left: 330px;
-  }
-  .inicio {
-    margin-left: 50px;
-  } */
 }
-@media screen and (max-width: 368px) {
+
+@media screen and (max-width: 500px) {
+  .tableroMMR {
+    /* height: 450px;
+    /* width: 350px; */
+    margin-top: 50px;
+    margin-left: 3%;
+  }
+  .tarjetas,
+  .front-face,
+  .back-face {
+    width: 45px;
+    height: 50px;
+  }
+
+  .grid h1 {
+    width: 450px;
+  }
+}
+@media screen and (max-width: 400px) {
   .tableroMMR {
     height: 450px;
-    width: 350px;
-    margin-top: 75px;
-    margin-left: 12%;
+    width: 300px;
+    margin-top: 2px;
+    margin-left: 7%;
   }
   .tarjetas,
   .front-face,
   .back-face {
     width: 40px;
     height: 40px;
+    margin: 5px;
   }
-  /* .grid {
-    height: 500px;
-    width: 350px;
-  }
-  .grid h1 {
-    width: 300px;
+  .inicio {
+    margin-left: 35px;
   }
 
-  .inicio {
-    margin-left: 50px;
+  .grid h1 {
+    width: 380px;
   }
-  .salir {
-    margin-left: 240px;
-  }
-  .grid button {
-    width: 100px;
-    height: 40px;
-    font-size: var(--3jr-fontsize-s);
-  } */
 }
-@media screen and (max-width: 268px) {
+
+@media screen and (max-width: 300px) {
   .tableroMMR {
     height: 350px;
     width: 250px;
-    margin-top: 75px;
   }
   .tarjetas,
   .front-face,
   .back-face {
     width: 35px;
     height: 35px;
+    margin: 3px;
   }
-  /* .grid h1 {
+  .grid h1 {
+    width: 320px;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .tableroMMR {
+    height: 300px;
     width: 200px;
-    margin-left: 20%;
+    margin-top: 50px;
   }
-  .salir {
-    margin-left: 180px;
+  .tarjetas,
+  .front-face,
+  .back-face {
+    width: 30px;
+    height: 35px;
+    margin: 2px;
+  }
+  .grid h1 {
+    width: 250px;
   }
   .grid button {
-    width: 100px;
-    height: 40px;
-    font-size: var(--3jr-fontsize-s);
-  } */
+    width: 80px;
+    height: 30px;
+  }
+  .salir {
+    margin-left: 125px;
+  }
 }
