--- a/src/pages/memory/stylesMMR.css
+++ b/src/pages/memory/stylesMMR.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-wrap: wrap;
   align-content: center;
-  height: 700px;
+  height: 450px;
   width: 600px;
   border-radius: 10px;
   border-color: var(--3jr-letterbotton);
   margin: auto;
-  margin-top: -70px;
+  /* margin-top: -70px; */
   justify-content: center;
 }
 
@@ -120,6 +120,19 @@
     width: 100px;
   }
 }
+@media screen and (max-width: 800px) {
+  .grid {
+    height: 700px;
+    align-content: center;
+  }
+  .tarjetas,
+  .front-face,
+  .back-face {
+    width: 80px;
+    height: 60px;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .tarjetas,
   .front-face,
