--- a/src/pages/stylesGames.css
+++ b/src/pages/stylesGames.css
@@ -2,17 +2,18 @@
   height: 700px;
   width: 700px;
   border-color: var(--3jr-letterbotton);
-  margin-top: 1%;
+  /* margin-top: 1%; */
 }
 
 .grid {
   margin: auto;
   display: grid;
-  height: 800px;
+  height: 670px;
   width: 700px;
   align-content: space-evenly;
   justify-items: stretch;
   justify-content: center;
+  margin-top: -5px;
 }
 
 .grid h1 {
@@ -22,22 +23,23 @@
   justify-content: center;
   color: var(--3jr-primary);
   width: 100%;
-  margin-top: var(--3jr-margin-xs);
+  margin-top: -60px;
 }
 
 .salir {
-  margin-left: 455px;
+  margin-left: 420px;
 }
 .inicio {
-  margin-left: 46px;
+  margin-left: 95px;
 }
+
 .grid button {
   display: flex;
   position: absolute;
-  margin-top: 100px;
+  margin-top: 75px;
   padding: 15px;
-  width: 200px;
-  height: 60px;
+  width: 180px;
+  height: 50px;
   font-size: var(--3jr-fontsize-m);
   align-items: center;
   justify-content: center;
