--- a/src/pages/tresEnRaya/stylesTER.css
+++ b/src/pages/tresEnRaya/stylesTER.css
@@ -2,11 +2,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  height: 600px;
-  width: 600px;
+  height: 450px;
+  width: 500px;
   border-radius: 10px;
   margin: auto;
-  margin-top: 100px;
+  /* margin-top: 50px; */
   border-width: 1px;
   border: solid;
   background-color: var(--3jr-secondary);
@@ -20,6 +20,9 @@
   font-size: var(--3jr-fontsize-xl);
   cursor: point;
 }
+/* .grid h1 {
+  margin-top: -180px;
+} */
 
 @media screen and (max-width: 800px) {
   .tableroTER {
